Gradually replacing the use of Guava classes with built-in JDK alternatives.