@@ -18,17 +18,18 @@ package com.optimaize.langdetect;
 
 import com.optimaize.langdetect.frma.LangProfileReader;
 import com.optimaize.langdetect.cybozu.util.LangProfile;
-import com.google.common.collect.ImmutableList;
 import com.optimaize.langdetect.ngram.NgramExtractors;
 import com.optimaize.langdetect.profiles.LanguageProfile;
 import com.optimaize.langdetect.profiles.OldLangProfileConverter;
-import com.optimaize.langdetect.text.*;
+import com.optimaize.langdetect.text.CommonTextObjectFactories;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.io.IOException;
 import java.util.List;
-import static org.testng.Assert.*;
+
+import static org.testng.Assert.assertEquals;
+import static org.testng.Assert.assertTrue;
 
 
 /**
@@ -63,7 +64,7 @@ public class LanguageDetectorImplTest {
             .suffixFactor(2.0);
 
         LangProfileReader langProfileReader = new LangProfileReader();
-        for (String language : ImmutableList.of("en", "fr", "nl", "de")) {
+        for (String language : List.of("en", "fr", "nl", "de")) {
             LangProfile langProfile = langProfileReader.read(LanguageDetectorImplTest.class.getResourceAsStream("/languages/" + language));
             LanguageProfile languageProfile = OldLangProfileConverter.convert(langProfile);
             builder.withProfile(languageProfile);
